--- a/src/assets/styles/scss/base/_typography.scss
+++ b/src/assets/styles/scss/base/_typography.scss
@@ -18,11 +18,11 @@ h3 {
     font-size: var(--secondaryTitle);
 }
 
-.text_important {
+#text_important {
     text-align: center;
     color: var(--text-important);
     font-size: var(--importantTitle);
 }
 #paragraph_important {
-    color: var(--black);
+    color: var(--black2);
 }
